--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "jest --forceExit",
-    "dev": "nodemon index.js"
+    "dev": "nodemon index.js",
+    "start": "react-scripts start"
   },
   "repository": {
     "type": "git",
