--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "jest --forceExit",
     "dev": "nodemon index.js",
-    "start": "react-scripts start"
+    "start": "node index.js"
   },
   "repository": {
     "type": "git",
